# PalworldSaveTools

./: .gitignore  AGENTS.md  CHANGELOG.multilang.md  README.md  _analyze.py  base_11391f67.pstbase  changelogs.md  license  pyproject.toml  requirements.txt  start.cmd  start.py
.github/workflows/: discord.yml  (+7 more)
.opencode/: opencode.jsonc
scripts/: add_translation_keys.cmd  auto_update.cmd  build_cx.cmd  clean_code.cmd  clear_fog.cmd  translate_readme.cmd  translate_tab_guide.cmd  update_game_data.cmd  update_translation_keys.cmd  validate_imports.cmd
src/: boot_paths.py  bootup.py  common.py  import_libs.py  loading_manager.py  nerd_btn.py  palobject.py  path_setup.py  qt_imports.py  resource_resolver.py
src/palsav/: .gitignore  LICENSE  README.md  pyproject.toml
src/palsav/palooz/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/palsav/palooz/ooz/: palooz_bindings.cpp
src/palsav/palooz/ooz/dep/ooz/: compr_lzoffset.cpp  compress.cpp  kraken.cpp
src/palsav/palsav/: __init__.py  _cityhash.py  archive.py  cli.py  core.py  gvas.py  io.py  json_tools.py  paltypes.py
src/palsav/palsav/commands/: __init__.py  auto_update.py  backup.py  convert.py  diag.py  resave_test.py  roundtrip_validation.py
src/palsav/palsav/compressor/: __init__.py  enums.py  oozlib.py  zlib.py
src/palsav/palsav/rawdata/: base_camp.py  base_camp_module.py  build_process.py  character.py  character_container.py  common.py  connector.py  debug.py  dynamic_item.py  foliage_model.py  foliage_model_instance.py  group.py  guild_item_storage.py  guild_lab.py  item_container.py  item_container_slots.py  map_concrete_model.py  map_concrete_model_module.py  map_data.py  map_model.py  map_object.py  work.py  work_collection.py  worker_director.py
tests/: README.md  conftest.py  dynamic_importer.py  pytest.ini  structural_report.py  test_registry.py
(+281 files in other folders)
