[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PalworldSaveTools"
version="2.0.8"
description = "All-in-one tool for fixing/transferring/editing Palworld saves"
readme = "README.md"
license = "MIT"
authors = [{ name = "Pylar" }]
requires-python = ">=3.11"
dependencies = [
    "pyside6-essentials",
    "Pillow",
    "cx-freeze>=8.3.0",
    "nerdfont",
    "packaging",
    "palsav-flex",
    "brotli",
    "cbor2",
    "msgpack",
    "zstandard",
    "orjson",
    "py7zr",
    "nuitka>=4.1.2",
    "loguru>=0.7.3",
]

[tool.uv.sources]
palsav-flex = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "src/palsav",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
extraPaths = ["src/palsav"]
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalIterable = false
reportOptionalComparison = false
reportArgumentType = false
reportOptionalIn = false

[dependency-groups]
dev = [
    "cx-freeze>=8.6.0",
    "pytest",
]
